src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.hidden {
  display: none;
}

.img-small {
  max-width: 300px;
}

.invalid {
  border: 1px solid red;
  background-color: #ffdddd;
}

.div-collections {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
  background-color: lightblue;
  gap: 10px;
  padding: 1em;
  margin-top: 1em;
  margin-bottom: 1em;
}

.div-card-buttons-rows {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
  gap: 10px;
  padding: 1em;
}

.div-sold-legend {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  padding: 0.5rem;
}

.div-cards {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
  gap: 10px;
}

.div-card {
  align-items: center;
  padding: 10px;
  margin: 10px;
}

.div-cards-buttons {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: baseline;
}

.div-add-cards {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-between;
  border: solid gray 1px;
  border-style: groove;
  background-color: lightcyan;
  gap: 10px;
  padding: 1em;
  margin-top: 1em;
  margin-bottom: 1em;
}

.div-input-group {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  gap: 1rem;
}

.div-collection-check {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
  gap: 0.5em;
  padding-left: 2em;
  padding-right: 2em;
}

.div-enter-collection {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  gap: 0.5rem;
  padding: 0.5em;
}

.div-input-label {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: flex-start;
  gap: 0.3rem;
}

.div-navigation {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  background-color: lightgray;
  padding: 0.5rem;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

.div-sort-buttons {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  background-color: lightblue;
  gap: 10px;
  padding: 1em;
  margin-top: 1em;
  margin-bottom: 1em;
}

.div-restore-buttons {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  background-color: lightseagreen;
  padding: 0.5rem;
}

.div-add-button {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  background-color: blue;
  padding: 0.5rem;
  margin-top: 1em;
  margin-bottom: 1em;
}

.div-delete {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  background-color: red;
  padding: 0.5rem;
  margin-top: 1em;
  margin-bottom: 1em;
}

.div-add-collection {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-around;
  background-color: lightblue;
  padding: 0.5rem;
  margin-top: 1em;
  margin-bottom: 1em;
}

.div-login {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  background-color: lightseagreen;
  padding: 1em;
  margin-top: 1em;
  margin-bottom: 1em;
}

.div-card-buttons {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  padding: 1em;
}

.div-home-buttons {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  background-color: lightblue;
  padding: 0.5rem;
}

.div-logout {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  background-color: blue;
  margin-top: 1em;
  margin-bottom: 1em;
  padding: 0.5rem;
}

.p-legend {
  font-weight: bold;
  padding: 1rem;
}

.p-instructions {
  padding: 0.5rem;
}

.form-card {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: flex-start;
  gap: 1rem;
}

.sold {
  background-color: lightblue;
  background-blend-mode: normal;
}

.unsold {
  background-color: lightgray;
  background-blend-mode: normal;
}

